修改标题滚动逻辑

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 			};
 			$('.tbody').html(html);
 			$('.tbody').on('click', '.address', function () {
+				titleRollingStop();
 				let dataId = $(this).attr('data-id')
 				window.open(`https://etherscan.io/address/${dataId}`)
 			})
@@ -158,7 +159,7 @@
 					console.log(oldArr);
 					getJson(dataId);
 					clearInterval(interval);
-					clearInterval(timel);
+					titleRollingStop();
 					$(`#blockDataout`).html(''); //添加结果
 					interval = setInterval(function () { getJson(dataId); }, 4000);
 					$(this).text('停止');
@@ -179,15 +180,10 @@
 						var newData = data.result;
 						if (oldArr.length == 0) {
 							oldArr = newData;
-							console.log('第一次运行')
-							console.log(oldArr)
 						} else {
 							// 判断是否有新的交易
 							var changeNum = newData.length - oldArr.length;
-							console.log('不是第一次')
-							console.log('差异'+changeNum)
 							var changeDic = {};
-							console.log(changeDic)
 							for (var i = 0; i < changeNum; ++i) {
 								var dataObj = newData[i];
 								if (dataObj['isError'] == 0) {
@@ -217,21 +213,12 @@
 							$(`#blockDataout`).html(resultHtml); //添加结果
 							if(changeDic.length > 0){
 								playDing();
-								document.title = '大哥有操作';//截取字符重新赋值给title
-								timel = setInterval(function () {
-									//获得页面标题,是string类型
-									var oldTitle = document.title;
-									//转换为数组类型
-									var titleArr = oldTitle.split('');
-									//使标题的字符产生位置的变化
-									titleArr.push(titleArr.shift());
-									//连接为字符串
-									document.title = titleArr.join('');
-								}, 100);
+								titleRollingStart();
 							}
 							oldArr = data.result;
 							// 跳转
 							$('#blockDataout').on('click', '.swapItem', function () {
+								titleRollingStop();
 								let dataId = $(this).attr('data-id')
 								window.open(`https://etherscan.io/address/${dataId}`)
 							})
@@ -241,6 +228,24 @@
 			})
 		}
 
+		function titleRollingStart(){
+			document.title = '大哥有操作';//截取字符重新赋值给title
+			timel = setInterval(function () {
+				//获得页面标题,是string类型
+				var oldTitle = document.title;
+				//转换为数组类型
+				var titleArr = oldTitle.split('');
+				//使标题的字符产生位置的变化
+				titleArr.push(titleArr.shift());
+				//连接为字符串
+				document.title = titleArr.join('');
+			}, 100);
+		}
+
+		function titleRollingStop(){
+			document.title = '扫大哥';
+			clearInterval(timel);
+		}
 
 		function playDing(){
 			var audio = document.getElementById("bgMusic");
